<resources>
    <string name="app_name">Cookie</string>
    <string name="title_section1">Stats Section</string>
    <string name="title_section2">Big Cookie Section</string>
    <string name="title_section3">Upgrades Section</string>
    <string name="action_settings">Settings</string>
    <string name="action_legacy">Legacy</string>
    <plurals name="cookie">
        <item quantity="one">Cookie</item>
        <item quantity="other">Cookies</item>
    </plurals>
    <plurals name="click">
        <item quantity="one">Click</item>
        <item quantity="other">Clicks</item>
    </plurals>
    <string name="clicked">Clicked</string>
    <string name="cps">Cps</string>
    <string name="cpc">Cpc</string>
    <string name="percent">Percent</string>
    <plurals name="day">
        <item quantity="one">Day</item>
        <item quantity="other">Days</item>
    </plurals>
    <plurals name="hour">
        <item quantity="one">Hour</item>
        <item quantity="other">Hours</item>
    </plurals>
    <plurals name="minute">
        <item quantity="one">Minute</item>
        <item quantity="other">Minutes</item>
    </plurals>
    <plurals name="heavenly_chips_description">
        <item quantity="one">%1$s chip (+ %2$s multiplier)</item>
        <item quantity="other">%1$s chips (+ %2$s multiplier)</item>
    </plurals>
    <plurals name="million">
        <item quantity="other">million</item>
    </plurals>
    <plurals name="billion">
        <item quantity="other">billion</item>
    </plurals>
    <plurals name="trillion">
        <item quantity="other">trillion</item>
    </plurals>
    <plurals name="quadrillion">
        <item quantity="other">quadrillion</item>
    </plurals>
    <plurals name="quintillion">
        <item quantity="other">quintillion</item>
    </plurals>
    <plurals name="sextillion">
        <item quantity="other">sextillion</item>
    </plurals>
    <plurals name="septillion">
        <item quantity="other">septillion</item>
    </plurals>
    <plurals name="octillion">
        <item quantity="other">octillion</item>
    </plurals>
    <plurals name="nonillion">
        <item quantity="other">nonillion</item>
    </plurals>
    <plurals name="decillion">
        <item quantity="other">decillion</item>
    </plurals>
    <plurals name="undecillion">
        <item quantity="other">undecillion</item>
    </plurals>
    <plurals name="duodecillion">
        <item quantity="other">duodecillion</item>
    </plurals>
    <plurals name="tredecillion">
        <item quantity="other">tredecillion</item>
    </plurals>
    <plurals name="quattuordecillion">
        <item quantity="other">quattuordecillion</item>
    </plurals>
    <plurals name="qunindecillion">
        <item quantity="other">qunindecillion</item>
    </plurals>
    <string name="frenzy">Frenzy! Cps x7 for %1$d seconds!</string>
    <string name="lucky">Lucky! +%1$s cookies</string>
    <string name="click_frenzy">Click frenzy! Clicks x777 for %1$d seconds!</string>
    <string name="total_cookies_made">Total cookies made: </string>
    <string name="all_time_cookies">All-time cookies: </string>
    <string name="spent_cookies">Total spent: </string>
    <string name="profited_cookies">Profited cookies: </string>
    <string name="game_resets">Resets: </string>
    <string name="heavenly_chips">Heavenly chips: </string>
    <string name="bakin_since">Baking time: </string>
    <string name="total_time">Total baking time: </string>
    <string name="cps_multi">Cps multiplier: </string>
    <string name="milk">Milk: </string>
    <string name="buildings">Buildings: </string>
    <string name="cookie_clicks">Cookie clicks: </string>
    <string name="handmade">Handmade cookies: </string>
    <string name="cookies_per_click">Cookies per click: </string>
    <string name="golden_cookies">Golden Cookies: </string>
    <string name="version_string">Version: </string>
    <string name="version">0.9</string>
    <string name="upgrades_bought">Upgrades bought: </string>
    <string name="achievements_unlocked">Achievements unlocked: </string>
    <string name="buy">Buy</string>
    <string name="exit_dialog_title">Exit</string>
    <string name="exit_dialog_text">Your cookies will stop acumulating</string>
    <string name="exit_dialog_stay">Stay</string>
    <string name="reset_dialog_title">Legacy</string>
    <string name="reset_dialog_text">Reset for +%1$s heavenly chips? (every heavenly chip will boost your cps +2%%)</string>
    <string name="reset_dialog_accept">Restart</string>
    <string name="reset_dialog_cancel">Stay</string>
    <string name="noreset_dialog_text">You haven\'t made enough cookies to reset. You need %1$s cookies</string>
    <string name="ok">OK</string>
    <plurals name="cursor">
        <item quantity="one">Cursor</item>
        <item quantity="other">Cursors</item>
    </plurals>
    <plurals name="grandma">
        <item quantity="one">Grandma</item>
        <item quantity="other">Grandmas</item>
    </plurals>
    <plurals name="farm">
        <item quantity="one">Farm</item>
        <item quantity="other">Farms</item>
    </plurals>
    <plurals name="mine">
        <item quantity="one">Mine</item>
        <item quantity="other">Mines</item>
    </plurals>
    <plurals name="factory">
        <item quantity="one">Factory</item>
        <item quantity="other">Factories</item>
    </plurals>
    <plurals name="ship">
        <item quantity="one">Shipment</item>
        <item quantity="other">Shipments</item>
    </plurals>
    <plurals name="lab">
        <item quantity="other">Alchemy labs</item>
        <item quantity="one">Alchemy lab</item>
    </plurals>
    <plurals name="portal">
        <item quantity="one">Portal</item>
        <item quantity="other">Portals</item>
    </plurals>
    <plurals name="time_machine">
        <item quantity="other">Time machines</item>
        <item quantity="one">Time machine</item>
    </plurals>
    <plurals name="antimatter">
        <item quantity="one">Antimatter condenser</item>
        <item quantity="other">Antimatter condensers</item>
    </plurals>
    <plurals name="prism">
        <item quantity="other">Prisms</item>
        <item quantity="one">Prism</item>
    </plurals>
    <string name="cursor_desc">Auto-clicks once every 10 seconds</string>
    <string name="grandma_desc">A nice grandma to bake more cookies</string>
    <string name="farm_desc">Grows cookie plants from cookie seeds</string>
    <string name="factory_desc">Produces large quantities of cookies</string>
    <string name="mine_desc">Mines out cookie dough and chocolate chips</string>
    <string name="ship_desc">Brings in fresh cookies from the cookie planet</string>
    <string name="lab_desc">Turns gold into cookies!</string>
    <string name="portal_desc">Opens a door to the cookieverse</string>
    <string name="time_machine_desc">Brings cookies from the past, before they were even eaten</string>
    <string name="antimatter_desc">Condenses the antimatter in the universe into cookies</string>
    <string name="prism_desc">Converts light itself into cookies</string>
    <string name="up0_name">Reinforced index finger</string>
    <string name="up0_quote">proud proud</string>
    <string name="up1_name">Carpal tunnel prevention cream</string>
    <string name="up1_quote">it… it hurts to click…</string>
    <string name="up2_name">Ambidextrus</string>
    <string name="up2_quote">Look ma, both hands!</string>
    <string name="up3_name">Thousand fingers</string>
    <string name="up3_quote">clickity</string>
    <string name="up4_name">Million fingers</string>
    <string name="up4_quote">clickityclickity</string>
    <string name="up5_name">Billion fingers</string>
    <string name="up5_quote">clickityclickityclickity</string>
    <string name="up6_name">Trillion fingers</string>
    <string name="up6_quote">clickityclickityclickityclickty</string>
    <string name="up7_name">Quadrillion fingers</string>
    <string name="up7_quote">clickityclickityclickityclickityclick</string>
    <string name="up8_name">Quintillion fingers</string>
    <string name="up8_quote">man, just go click click click click click, it\'s real easy, man</string>
    <string name="up9_name">Sextillion fingers</string>
    <string name="up9_quote">sometimes things just click</string>
    <string name="up10_name">Septillion fingers</string>
    <string name="up10_quote">[cursory flavor text]</string>
    <string name="up11_name">Octillion fingers</string>
    <string name="up11_quote">Turns out you can quite put your finger on it</string>
    <string name="up12_name">Fowards from grandma</string>
    <string name="up12_quote">RE:RE:thought you\'d get a kick out of this ;))</string>
    <string name="up13_name">Steel-plated rolling pins</string>
    <string name="up13_quote">Just what you kneaded</string>
    <string name="up14_name">Lubricated dentures</string>
    <string name="up14_quote">squish</string>
    <string name="up15_name">Prune juice</string>
    <string name="up15_quote">Gets me going</string>
    <string name="up16_name">Double-thick glasses</string>
    <string name="up16_quote">Oh… so THAT\'s what I\'ve been baking</string>
    <string name="up17_name">Aging agents</string>
    <string name="up17_quote">Counter-intuitively, grandmas have uncanny ability to become more powerful the older the get</string>
    <string name="up18_name">Farmer grandmas</string>
    <string name="up18_quote">A nice farmer to grow more cookies</string>
    <string name="up19_name">Worker grandmas</string>
    <string name="up19_quote">A nice worker to manufacture more cookies</string>
    <string name="up20_name">Miner grandmas</string>
    <string name="up20_quote">A nice miner to dig more cookies</string>
    <string name="up21_name">Cosmic grandmas</string>
    <string name="up21_quote">A nice thing to… uh… cookies</string>
    <string name="up22_name">Transmuted grandmas</string>
    <string name="up22_quote">A nice golden grandma to convert into more cookies</string>
    <string name="up23_name">Altered grandmas</string>
    <string name="up23_quote">a NiCe GrAnDmA tO bA##########</string>
    <string name="up24_name">Grandmas\' grandmas</string>
    <string name="up24_quote">A nice grandma\'s nice grandma to bake double the cookies</string>
    <string name="up25_name">Antigrandmas</string>
    <string name="up25_quote">A mean antigrandma to vomit more cookies. (Do not put in contact with normal grandmas; loss of matter may occur)</string>
    <string name="up26_name">Rainbow grandmas</string>
    <string name="up26_quote">A luminus grandma to sparkle into cookies</string>
    <string name="up27_name">Cheap hoes</string>
    <string name="up27_quote">Rake in the dough!</string>
    <string name="up28_name">Fertilizer</string>
    <string name="up28_quote">It\'s chocolate, I swear</string>
    <string name="up29_name">Cookie trees</string>
    <string name="up29_quote">A relative of breadfruit</string>
    <string name="up30_name">Genetically-modified cookies</string>
    <string name="up30_quote">All-natural mutations</string>
    <string name="up31_name">Gingerbread scarecrows</string>
    <string name="up31_quote">Staring at your crops with mischievous glee</string>
    <string name="up32_name">Pulsar sprinklers</string>
    <string name="up32_quote">There\'s no such thing as over-watering. The moistest is bestest</string>
    <string name="up33_name">Sturdier conveyor belts</string>
    <string name="up33_quote">You\'re going places</string>
    <string name="up34_name">Child labor</string>
    <string name="up34_quote">Cheaper, healthier workforce</string>
    <string name="up35_name">Sweatshop</string>
    <string name="up35_quote">Slackers will be terminated</string>
    <string name="up36_name">Radium reactors</string>
    <string name="up36_quote">Give your cookies a healthy glow</string>
    <string name="up37_name">Recombobulators</string>
</resources>